Add logging and CORS support to CustomerController
This commit introduces logging for debugging purpose using the Slf4j library in the CustomerController class. In addition, it adds CORS support and allows requests from the specified origin (http://localhost:5173) in order to handle cross-domain security constraints.

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -12,4 +12,4 @@ openai:
   model: gpt-3.5-turbo
   api:
     url: https://api.openai.com/v1/chat/completions
-    key: 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
+    key:
